--- a/simpleHTMLTraining.html
+++ b/simpleHTMLTraining.html
@@ -6,46 +6,46 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500|Roboto+Slab|Material+Icons" type="text/css" />
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-blue.min.css" />
-		<!-- <link rel="stylesheet" href="https://geteach.com/scripts/newearth/geteachStyle1218.css" type="text/css" /> -->
-		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>				
+		<!-- <link rel="stylesheet" href="https://geteach.com/scripts/newearth/geteachStyle1227.css" type="text/css" /> -->
 	</head>
 	<body>
 		<div id="container">
 			<main class="panelMain">
-<!-- 
-				<div class="mediaContain">
+
+				<!-- <div class="mediaContain">
 					<div class="slideshow-container">
-						<div class="mySlides fade">		
+						<div class="mySlides fade">
 							<img class="image" src="https://storage.googleapis.com/geteachkml4/AustinSimple.jpg" />
-							<div class="captionDiv"> 
+							<div class="captionDiv">
 								<div class="caption">Image Source: <a href="https://earth.google.com/web" target="_blank">Google Earth</a></div>
-					  		</div>
-					    </div>
+							</div>
+						</div>
 					</div>
-				</div>
--->
-<!-- 
-				<div class="content">			
-					<div class="title">					
+				</div> -->
+
+
+				<!-- <div class="content">
+					<div class="title">
 						Simple Image
-					</div>		
-					<div class="description">		
+					</div>
+					<div class="description">
 						<p class="text">Simple Image Template</p>
 					</div>
-				</div>
--->
-<!-- 
-				<div class="footer">
+				</div> -->
+
+
+				<!-- <div class="footer">
 					<div class="logoLeft">
 						<a href="https://twitter.com/geteach" target="_blank">
 							<img src="https://storage.googleapis.com/geteachkml4/logogeteachtemp.png" />
 						</a>
 					</div>
 					<div class="logoRight" style="display:none">
-					</div>				
-				</div>
--->
-			</main>			
-		</div>		
+					</div>
+				</div> -->
+
+			</main>
+		</div>
 	</body>
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </html>
